Bug 936854 - Get the unowned base shape for a shape with the right API, r=jandem.